fixed overflow issues, moved around donation code

--- a/src/App.css
+++ b/src/App.css
@@ -953,6 +953,11 @@ body {
   color:white;
 }
 
+p.max-size {
+  padding:15px 0;
+  color:#777;
+}
+
 .file-upload-bay {
   margin-top:10px;
   display:flex;
@@ -967,11 +972,19 @@ body {
   width:100%;
   margin-bottom:20px;
   border-radius:4px;
+  
+  max-height:300px;
 }
 
 .file-upload-bay .uploaded-file img {
   max-width:100%;
   max-height:100%;
+  height:260px;
+  box-sizing: border-box;
+}
+
+.file-upload-bay .file-name {
+  padding-bottom:20px;
 }
 
 .custom-modal-error {
@@ -1467,14 +1480,16 @@ body {
 
 .country-management .country-list::-webkit-scrollbar,
 .modal-country-list::-webkit-scrollbar,
-.caucus .manage-speaker .speaker-list::-webkit-scrollbar {
+.caucus .manage-speaker .speaker-list::-webkit-scrollbar,
+.speakers .speaker-list::-webkit-scrollbar {
   width:7px;
   background:#eee;
 }
 
 .country-management .country-list::-webkit-scrollbar-thumb,
 .modal-country-list::-webkit-scrollbar-thumb,
-.caucus .manage-speaker .speaker-list::-webkit-scrollbar-thumb {
+.caucus .manage-speaker .speaker-list::-webkit-scrollbar-thumb,
+.speakers .speaker-list::-webkit-scrollbar-thumb {
   background:#CCC;
   cursor:pointer;
   border-radius:2px;
@@ -1600,6 +1615,77 @@ body {
 
 
 
+/*Stripe payment styles*/
+#payment-form{
+  width: 30vw; align-self: center;
+  box-shadow: 0px 0px 0px 0.5px rgba(50, 50, 93, 0.1),0px 2px 5px 0px rgba(50, 50, 93, 0.1), 0px 1px 1.5px 0px rgba(0, 0, 0, 0.07);
+  border-radius: 7px;
+  padding: 40px;
+}
+
+#card-element{
+  border-radius: 6px;
+    margin-bottom: 6px;
+    padding: 12px;
+    border: 1px solid rgba(50, 50, 93, 0.1);
+    max-height: 44px;
+    font-size: 16px;
+    width: 100%;
+    background: white;
+    box-sizing: border-box;
+  }
+
+.result-message {
+  line-height: 22px;
+  font-size: 16px;
+}
+
+.result-message a {
+  color: rgb(89, 111, 214);
+  font-weight: 600;
+  text-decoration: none;
+}
+
+.hidden {
+  display: none;
+}
+  
+#card-error {
+  color: rgb(105, 115, 134);
+  font-size: 16px;
+  line-height: 20px;
+  margin-top: 12px;
+  text-align: center;
+}
+
+.pay-button {
+  background: #5469d4;
+  font-family: Arial, sans-serif;
+  color: #ffffff;
+  border-radius: 0 0 4px 4px;
+  border: 0;
+  padding: 12px 16px;
+  font-size: 16px;
+  font-weight: 600;
+  cursor: pointer;
+  display: block;
+  transition: all 0.2s ease;
+  box-shadow: 0px 4px 5.5px 0px rgba(0, 0, 0, 0.07);
+  width: 100%;
+}
+  
+.pay-button:hover {
+  filter: contrast(115%);
+}
+
+
+
+
+
+
+
+
+
 
 
 /* Mobile Styles */
@@ -1709,67 +1795,3 @@ body {
   }
   
 }
-
-/*Stripe payment styles*/
-#payment-form{
-  width: 30vw; align-self: center;
-  box-shadow: 0px 0px 0px 0.5px rgba(50, 50, 93, 0.1),0px 2px 5px 0px rgba(50, 50, 93, 0.1), 0px 1px 1.5px 0px rgba(0, 0, 0, 0.07);
-  border-radius: 7px;
-  padding: 40px;
-}
-
-#card-element{
-  border-radius: 6px;
-    margin-bottom: 6px;
-    padding: 12px;
-    border: 1px solid rgba(50, 50, 93, 0.1);
-    max-height: 44px;
-    font-size: 16px;
-    width: 100%;
-    background: white;
-    box-sizing: border-box;
-  }
-
-.result-message {
-  line-height: 22px;
-  font-size: 16px;
-}
-
-.result-message a {
-  color: rgb(89, 111, 214);
-  font-weight: 600;
-  text-decoration: none;
-}
-
-.hidden {
-  display: none;
-}
-  
-#card-error {
-  color: rgb(105, 115, 134);
-  font-size: 16px;
-  line-height: 20px;
-  margin-top: 12px;
-  text-align: center;
-}
-
-.pay-button {
-  background: #5469d4;
-  font-family: Arial, sans-serif;
-  color: #ffffff;
-  border-radius: 0 0 4px 4px;
-  border: 0;
-  padding: 12px 16px;
-  font-size: 16px;
-  font-weight: 600;
-  cursor: pointer;
-  display: block;
-  transition: all 0.2s ease;
-  box-shadow: 0px 4px 5.5px 0px rgba(0, 0, 0, 0.07);
-  width: 100%;
-}
-  
-.pay-button:hover {
-  filter: contrast(115%);
-}
-
